# earthground

./: .gitignore  .readthedocs.yaml  AGENT.md  AGENTS.md  LM317_3.3V.kicad_pcb  LM317_3.3V.kicad_prl  LM317_3.3V.kicad_pro  README.md  pyproject.toml  requirements.txt
.superset/: config.json
common/: components.py  footprint_types.py  layout.py  schematic.py  stackup.py  standard_values.py  utils.py
docs/: components.rst  conf.py  exporters.rst  index.rst  overview.rst  philosophy.rst  quickstart.rst  schematic.rst
docs/superpowers/specs/: 2026-03-18-kicad-schematic-export-design.md
earthground/: AGENTS.md  __init__.py  components.py  footprint_types.py  gpt.py  layout.py  schematic.py  standard_values.py  utils.py
earthground/exporters/: __init__.py  jlcpcb.py  kicad.py  ltspice.py
earthground/footprints/: generics.py  header.py  passives.py  qfn.py  soic.py  sot.py  transistor_outline.py  tssop.py
earthground/importers/: kicad.py
earthground/ipc/: kicad_ipc.py
earthground/models/: __init__.py  layout_models.py
earthground/tools/: README.md  auto_schematic.py  class_writer.py  component_creator.py  component_creator2.py  get_kicad_layout.py  lcsc.py  place_with_kicad.py  test.json  test_datasheet.py  visual_pin_list.py
earthground/tools/helper/: ai.py  component_creator.py  digikey.py  markdown.py  python_writer.py  response_cache.py
examples/: LM317_3.3V.kicad_prl  README.md  io_expander_example.py  io_expander_example.yaml  ldo.py  lm317_ipc_demo.py  lm317_ipc_demo.yaml
exporters/: kicad.py
layout_editor/: index.html
testdata/: bom.csv  bom_modules.csv
tests/: test_components.py  test_footprint_types.py  test_footprints.py  test_jlcpcb.py  test_kicad.py  test_kicad_bottom_layer.py  test_kicad_schematic_autoplace.py  test_kicad_schematic_export.py  test_kicad_schematic_symbols.py  test_kicad_schematic_writer.py  test_layout_yaml.py  test_library_imports.py  test_module_net_names.py  test_place_with_kicad.py  test_schematic.py  test_standard_values.py  test_utils.py
