[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "earthground"
version = "0.2.9"
description = "A Python Library for Creating Software-Defined Electrical Designs"
dependencies = [
    "kiutils==1.4.8",
    "python-gerber>=0.1.0",
    "pytest>=7.4.2",
    "openai>=1.1.0",
    "inquirerpy==0.3.4",
    "black>=23.3.0",
    "colorlog>=6.9.0",
    "setuptools>=65.6.3",
    "svg.py>=1.0.0",
    "boto3>=1.42.21",
    "pykicad",
    "drawsvg>=2.4.1",
]
readme = "README.md"
authors = [{name = "esophagoose"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">3.10"

[project.optional-dependencies]
test = ["pytest>6"]
bedrock = ["boto3>=1.34.0"]

[project.urls]
Source = "https://github.com/esophagoose/earthground"

[tool.flit.module]
name = "earthground"

[tool.uv.sources]
pykicad = { path = "../pykicad" }
