[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "earthground"
version = "0.3.6"
description = "A Python Library for Creating Software-Defined Electrical Designs"
dependencies = [
    "kiutils==1.4.8",
    "python-gerber>=0.1.0",
    "pytest>=7.4.2",
    "openai>=1.1.0",
    "inquirerpy==0.3.4",
    "black>=23.3.0",
    "colorlog>=6.9.0",
    "setuptools>=65.6.3",
    "svg.py>=1.0.0",
    "boto3>=1.42.21",
    "pykicad",
    "drawsvg>=2.4.1",
    "kicad-python>=0.6.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.11.3",
]
readme = "README.md"
authors = [{name = "esophagoose"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">3.10"

[project.optional-dependencies]
test = ["pytest>6"]

[project.scripts]
place_with_kicad = "earthground.tools.place_with_kicad:main"

[project.urls]
Source = "https://github.com/esophagoose/earthground"

[tool.flit.module]
name = "earthground"
